--- a/web/website/fa/index.html
+++ b/web/website/fa/index.html
@@ -355,7 +355,7 @@
                     هر
                     چیزی که دوست دارید را درباره ربات با ما درمیان بگذارید. آدرس ایمیل ما <a
                         href="mailto:info@mafiagame.ir">info@mafiagame.ir</a> است
-                    شما همچنین می‌توانید با ما در <a href="https://telegram.me/hekmatof">تلگرام</a> در تماس باشید.
+                    شما همچنین می‌توانید با ما در <a href="https://telegram.me/mashtaki">تلگرام</a> در تماس باشید.
                 </p>
             </section>
         </article>
