--- a/web/website/index.html
+++ b/web/website/index.html
@@ -307,7 +307,7 @@
                 <p style="text-align: justify">
                     We love to receive your emails at <a href="mailto:info@mafiagame.ir">info@mafiagame.ir</a>
                     <br/>
-                    you can also contact us by <a href="https://telegram.me/hekmatof">telegram</a>
+                    you can also contact us by <a href="https://telegram.me/mashtaki">telegram</a>
                 </p>
             </section>
         </article>
